POPUG-007 Utilized tags for API generation.
