# task-tracker/src/main/resources/openapi/uber-popug-task-tracker-contract.yaml
@@ -8,7 +8,7 @@ paths:
     post:
       operationId: postTasks
       tags:
-        - TasksApi
+        - TasksCreation
       description: 'Creates a new task and assigns it to a random employee.'
       requestBody:
         required: true
@@ -28,7 +28,7 @@ paths:
     post:
       operationId: reassignAllTasks
       tags:
-        - TasksAdminApi
+        - TasksAdmin
       description: 'Reassigns all the tasks between available users.'
       responses:
         '200':
@@ -37,7 +37,7 @@ paths:
     patch:
       operationId: completeTask
       tags:
-        - UserActionsApi
+        - UserActions
       description: 'Completes a task with given id for specific user.'
       parameters:
         - name: userId
